src/tests/ci/assignment_4_control_flow/valid/01_if_else_basic.c
int main() {
    int x = 5;
    if (x > 0) {
        x = x + 1;
    } else {
        x = x - 1;
    }
    return x;
}