src/tests/ci/assignment_4_control_flow/invalid_semantic/03_block_scope_variable_not_visible.c
int main() {
    if (1) {
        int x = 5;
    }
    return x;
}